update java note: gc